# jumpcut

./: .gitignore  AGENTS.md  BENCHMARK_BASELINE.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  autoresearch-wasm.checks.sh  autoresearch-wasm.md  autoresearch-wasm.node.sh  autoresearch-wasm.sh  generate-wasm-package.sh
benches/: 108.fountain  jumpcut_benchmarks.rs  my_benchmark.rs
benchmarks/wasm/: baseline-state.json
docs/: diagnostics.md  dialogue-split-analysis.md  final-draft-dialogue-splitting-rules.md  formatting-and-metadata.md  fountain-rules.md  html-embedded-fonts.md  line-height-repair-plan.md  pagination-cleanup-plan.md  pagination-spec.md  style_mask.md  styled-text-fidelity-plan.md  text_style_parser.md  wasm.md
jumpcut/: Cargo.toml  LICENSE
jumpcut-cli/: Cargo.toml
jumpcut-cli/src/: Main.rs
jumpcut-wasm/: Cargo.toml
jumpcut-wasm/src/: lib.rs
jumpcut/benches/: jumpcut_benchmarks.rs
jumpcut/src/: converters.rs
jumpcut/src/templates/: fdx.hbs
jumpcut/tests/: parse_act_break_test.rs  parse_action_test.rs  parse_dialogue_block_test.rs  parse_dual_dialogue_block_test.rs  parse_lyric_test.rs  parse_metadata_test.rs  parse_page_breaks_test.rs  parse_transition_test.rs
jumpcut_cli/: Cargo.toml
jumpcut_cli/src/: main.rs
scripts/: bench-wasm-node.mjs  ensure-wasm-bindgen-cli.sh  new_fd_probe.py  pdf_text_placement_diagnostics.py
scripts/wasm/: bench-node.mjs  checks.sh  generate-package.sh  report.sh
src/: converters.rs  fdx.rs  html_output.rs  lib.rs  main.rs  parser.rs  pdf_output.rs  text_output.rs  text_style_parser.rs  title_page.rs  visual_lines.rs  wasm_bindings.rs
src/diagnostics/: line_breaks.rs  mod.rs  page_breaks.rs
src/model/: converters.rs  document.rs  mod.rs  render_attributes.rs  styled_text.rs  title_page.rs
src/pagination/: comparison.rs  composer.rs  dialogue_split.rs  fixtures.rs  flow_split.rs  ir.rs  layout_profile.rs  line_break_diagnostics.rs  margin.rs  measurement.rs  mod.rs  normalized.rs  page_break_diagnostics.rs  paginator.rs  semantic.rs  sentence_boundary.rs  split_scoring.rs  visual_lines.rs  wrapping.rs
src/rendering/: fdx.rs  fountain.rs  html.rs  mod.rs  pdf.rs  shared.rs  text.rs
src/templates/: body.hbs  fdx.hbs  html.hbs  html_style.css
src/text_style_parser/: new_impl.rs
tests/: fountain_output_test.rs  layout_modifiers_model_test.rs  pagination_composer_test.rs  pagination_corpus_harness_test.rs  pagination_dialogue_split_test.rs  pagination_fd_probe_test.rs  pagination_flow_split_test.rs  pagination_geometry_test.rs  pagination_ir_test.rs  pagination_layout_profile_test.rs  pagination_margin_test.rs  pagination_measurement_test.rs  pagination_paginator_test.rs  pagination_semantics_test.rs  pagination_wrapping_test.rs  parse_act_break_test.rs  parse_action_test.rs  parse_dialogue_block_test.rs  parse_dual_dialogue_block_test.rs  parse_fdx_test.rs  parse_leading_whitespace_test.rs  parse_lyric_test.rs  parse_metadata_test.rs  parse_notes_test.rs  parse_page_breaks_test.rs  parse_scene_heading_test.rs  parse_sections_synopses_test.rs  parse_transition_test.rs
tests/fixtures/corpus/public/big-fish-scene-numbers/: case.yaml
tests/fixtures/corpus/public/big-fish-scene-numbers/canonical/: page-breaks.json  page-mappings.json
tests/fixtures/corpus/public/big-fish-scene-numbers/extracted/: fdx-settings.json  pdf-pages.json
tests/fixtures/corpus/public/big-fish-scene-numbers/source/: source.fdx  source.fountain
tests/fixtures/corpus/public/big-fish-scene-numbers/working/: page-breaks.draft.json  parsed-elements.json  review-notes.yaml  review.md
tests/fixtures/corpus/public/big-fish/canonical/: page-breaks.json  page-mappings.json
tests/fixtures/corpus/public/big-fish/extracted/: fdx-settings.json  pdf-pages.json
tests/fixtures/corpus/public/big-fish/source/: source.fdx  source.fountain
tests/fixtures/corpus/public/brick-n-steel/canonical/: page-breaks.json  page-mappings.json
tests/fixtures/corpus/public/brick-n-steel/extracted/: pdf-pages.json
tests/fixtures/corpus/public/brick-n-steel/source/: source.fountain
tests/fixtures/corpus/public/extranormal/source/: source.fdx
tests/fixtures/corpus/public/gumshoe/canonical/: page-breaks.json
tests/fixtures/fd-probes/: README.md
tests/fixtures/fd-probes/dialogue-more-cost-template/: expected.json  source.fountain
tests/fixtures/fd-probes/dialogue-parenthetical-four-words/: expected.json  source.fountain
tests/fixtures/fd-probes/long-sentence-fragment/: expected.json  source.fountain
tests/fixtures/fd-probes/mayor-speech-go-key/: expected.json  source.fountain
tests/fixtures/fd-probes/page-54-minus-one-line/: expected.json  source.fountain
tests/fixtures/fd-probes/page-54-no-parenthetical/: expected.json  source.fountain
tests/fixtures/fd-probes/page-54-parenthetical-vs-first-sentence/: expected.json  source.fountain
tests/fixtures/fd-probes/page-54-plus-one-line/: expected.json  source.fountain
tests/fixtures/fd-probes/page-54-unexplained-split/: expected.json  source.fountain
tests/fixtures/fd-probes/two-short-sentences/: expected.json  source.fountain
tests/fixtures/fd-probes/two-short-sentences-plus-one-liner/: expected.json  source.fountain
tests/fixtures/fd-probes/very-long-sentence-22-padding/: expected.json  source.fountain
tests/fixtures/fd-probes/very-long-sentence-23-padding/: expected.json  source.fountain
tests/fixtures/fdx-import/: brick-n-steel-basic.fdx  dual-dialogue-basic.fdx  paragraph-layout-overrides.fdx  settings-normalized.fdx  title-page-cast-page.fdx  title-pages-multi.fdx
tests/fixtures/pagination/: big-fish.p38-40.page-breaks.json  big-fish.p42-44.page-breaks.json  big-fish.p55-57.page-breaks.json  big-fish.p77-79.page-breaks.json  big-fish.split-page-breaks.json  brick-n-steel.normalized.json  brick-n-steel.p2-4.page-breaks.json  brick-n-steel.page-breaks.json  little-women.p13-14.page-breaks.json  little-women.p4-6.page-breaks.json
tools/: check_corpus_pdf_parity.py  check_sample_pdf_parity.py  pagination-comparator.html  pdf_measure.py  verify.py
(+17 files in other folders)
