[package]
name = "jumpcut"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "JumpCut is a library and CLI for converting Fountain-formatted text files into FDX and HTML formats."
homepage = "https://github.com/SimonGZ/jumpcut"
repository = "https://github.com/SimonGZ/jumpcut"
keywords = ["fountain", "screenwriting"]
default-run = "jumpcut"
readme = "README.md"
include = [
    "CHANGELOG.md",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/bin/main.rs",
    "src/converters.rs",
    "src/lib.rs",
    "src/rendering/*.rs",
    "src/templates/html_style.css",
    "src/text_style_parser.rs",
]

[workspace]
members = ["jumpcut-wasm"]
resolver = "2"

[[bin]]
name = "jumpcut"
path = "src/bin/main.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
regex = { version = "1.10.5", default-features = false, features = ["std", "perf"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
regex = { version = "1.10.5", default-features = false, features = ["std", "perf-dfa"] }

[features]
default = ["html", "fdx", "cli"]
html = []
fdx = []
cli = ["clap"]
lib-only = ["html", "fdx"]

[dev-dependencies]
criterion = "0.5.1"
unicode_categories = "0.1.1"
pretty_assertions = "1.0.0"
handlebars = "5.1.2"

[[bench]]
name = "jumpcut_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
