[package]
name = "jumpcut"
version = "1.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "JumpCut is a library and CLI for converting Fountain-formatted text files into FDX, HTML, JSON, text, and PDF formats."
homepage = "https://github.com/SimonGZ/jumpcut"
repository = "https://github.com/SimonGZ/jumpcut"
keywords = ["fountain", "screenwriting"]
default-run = "jumpcut"
readme = "README.md"
include = [
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "docs/*.md",
    "src/**/*.rs",
    "src/templates/**/*.ttf",
    "src/templates/*.css",
    "src/templates/*.hbs",
]

[workspace]
members = ["jumpcut-wasm"]
resolver = "2"

[[bin]]
name = "jumpcut"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.22.1"
lazy_static = "1.4.0"
pdf-writer = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.44", features = ["formatting"] }
ttf-parser = "0.25.1"
clap = { version = "4.5.7", features = ["derive"], optional = true }
quick-xml = "0.39.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
regex = { version = "1.10.5", default-features = false, features = ["std", "perf"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
regex = { version = "1.10.5", default-features = false, features = ["std", "perf-dfa"] }

[features]
default = ["html", "fdx", "pdf", "cli"]
html = []
fdx = []
pdf = []
cli = ["clap"]
lib-only = ["html", "fdx", "pdf"]

[dev-dependencies]
criterion = "0.5.1"
unicode_categories = "0.1.1"
pretty_assertions = "1.0.0"
handlebars = "5.1.2"

[[bench]]
name = "jumpcut_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
