[package]
name = "jumpcut"
version = "0.5.5"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
unicode-segmentation = "1.8.0"
serde = { version = "1.0.133", features = ["derive"] }
handlebars = "4.1.6"
serde_json = "1.0.74"

[dependencies.regex]
version = "1.5.4"
default-features = false
features = ["std", "unicode-gencat", "unicode-perl"] # regex currently requires the standard library, you must re-enable it.

[dev-dependencies]
criterion = "0.3.5"
unicode_categories = "0.1.1"
pretty_assertions = "1.0.0"

[[bench]]
name = "jumpcut_benchmarks"
harness = false
