[package]
name = "jumpcut"
version = "0.6.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
unicode-segmentation = "1.8.0"
serde = { version = "1.0.133", features = ["derive"] }
handlebars = { version = "4.1.6", optional = true }
serde_json = "1.0.74"
regex = { version = "1.5.4", default-features = false, features = ["std", "perf", "unicode-gencat", "unicode-perl"] }

[features]
default = ["html", "fdx"]
html = ["handlebars"]
fdx = ["handlebars"]

[dev-dependencies]
criterion = "0.3.5"
unicode_categories = "0.1.1"
pretty_assertions = "1.0.0"

[[bench]]
name = "jumpcut_benchmarks"
harness = false
