[package]
name = "jumpcut"
version = "0.6.2"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
unicode-segmentation = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
handlebars = { version = "5.1.2", optional = true }
serde_json = "1.0.117"
regex = { version = "1.10.5", default-features = false, features = ["std", "perf", "unicode-gencat", "unicode-perl"] }

[features]
default = ["html", "fdx"]
html = ["handlebars"]
fdx = ["handlebars"]

[dev-dependencies]
criterion = "0.5.1"
unicode_categories = "0.1.1"
pretty_assertions = "1.0.0"

[[bench]]
name = "jumpcut_benchmarks"
harness = false
